2003-09-08  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Version 0.99.2

	* configure.in: Bumped version. Require PyGTK-2.0.0.

2003-09-08  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/low-level.py: 
	* examples/simple.py: 
	* examples/simple-mixed.py: 
	* examples/pixmap.py: 
	* examples/pixmap-mixed.py: Rewritten in object-oriented style.
	simple*.py demonstrates the usage of gtk.gtkgl.Widget mixin.

2003-09-06  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkgl/apputils.py: Import pygtk.

	* gtk/gdkgl/ext.py: 
	* gtk/gtkgl/widget.py: Added __all__ module attribute.

2003-09-03  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gdkgl/ext.py (_pixmap_ext, _window_ext, _register_method) 
	(_register_ext): Make them "internal use".

2003-09-03  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/low-level.py:
	* examples/color.py: 
	* examples/share-lists.py: Removed unnecessary code.

	* examples/coolwave.py: import pygtk.

2003-09-03  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkgl/apputils.py (GLScene*): Subclassing from built-in
	object.
	(GLArea.__button_press_event, GLArea.__button_release_event): Do
	gl_begin() for selection.

2003-09-03  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* Makefile.am (EXTRA_DIST): Removed dsextras.py

	* dsextras.py: Removed.

	* setup.py.in: Use dsextras installed by PyGTK.

2003-09-03  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gdkgl/ext.py: New gtk.gdkgl.ext() function to add OpenGL
	extension API support to the Gdk object.
	e.g. pixmap = gtk.gdkgl.ext(gtk.gdk.Pixmap(...))
	     glpixmap = pixmap.set_gl_capability(glconfig)
	     pixmap.is_gl_capable()

	* gtk/gdkgl/__init__.py: Import ext module.

	* setup.py.in: 
	* gtk/gdkgl/Makefile.am (pygdkgl_PYTHON): Added ext.py.

	* examples/pixmap-mixed.py (PixmapMixedDemo.__configure_event): 
	* examples/pixmap.py (PixmapDemo.__configure_event): Use
	gtk.gdkgl.ext().
